--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-facebook": "^8.1.4",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
