--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1"
   },
