--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.26.1",
     "clipboard": "^2.0.8",
+    "html-react-parser": "^1.4.10",
     "install": "^0.13.0",
     "npm": "^7.24.0",
     "react": "^17.0.2",
