--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "clipboard": "^2.0.8",
     "html-react-parser": "^1.4.10",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.1",
     "npm": "^7.24.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-facebook": "^8.1.4",
