--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-facebook": "^8.1.4",
+    "react-lazy-load-image-component": "^1.5.4",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
