--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "axios": "^0.26.1",
     "clipboard": "^2.0.8",
     "html-react-parser": "^1.4.10",
+    "i18next": "^21.6.16",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.0",
     "install": "^0.13.0",
     "js-cookie": "^3.0.1",
     "npm": "^7.24.0",
@@ -18,6 +21,8 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-facebook": "^8.1.4",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^11.16.7",
     "react-lazy-load-image-component": "^1.5.4",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.5",
